// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Overlay should render with default styles 1`] = `
.grid-0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10000;
  overflow: hidden;
  pointer-events: none;
  transform-origin: 50% 0%;
}

.grid-0 .EmotionGrid-Container {
  height: 100%;
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.grid-0 .EmotionGrid-Row {
  height: 100%;
  background: #0470F50D;
}

.grid-0 .EmotionGrid-Col {
  height: 100%;
}

.grid-0 .EmotionGrid-Col>div {
  position: relative;
  width: 100%;
  height: 100%;
}

.grid-0 .EmotionGrid-Col>div::before,
.grid-0 .EmotionGrid-Col>div::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #0470F50D;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10000;
  overflow: hidden;
  pointer-events: none;
  transform-origin: 50% 0%;
}

.emotion-0 .EmotionGrid-Container {
  height: 100%;
  opacity: 0;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.emotion-0 .EmotionGrid-Row {
  height: 100%;
  background: #0470F50D;
}

.emotion-0 .EmotionGrid-Col {
  height: 100%;
}

.emotion-0 .EmotionGrid-Col>div {
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-0 .EmotionGrid-Col>div::before,
.emotion-0 .EmotionGrid-Col>div::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #0470F50D;
}

<div
  class="emotion-0"
/>
`;

exports[`Grid Overlay should render with visible styles when passed the visible prop 1`] = `
.grid-0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10000;
  overflow: hidden;
  pointer-events: none;
  transform-origin: 50% 0%;
}

.grid-0 .EmotionGrid-Container {
  height: 100%;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.grid-0 .EmotionGrid-Row {
  height: 100%;
  background: #0470F50D;
}

.grid-0 .EmotionGrid-Col {
  height: 100%;
}

.grid-0 .EmotionGrid-Col>div {
  position: relative;
  width: 100%;
  height: 100%;
}

.grid-0 .EmotionGrid-Col>div::before,
.grid-0 .EmotionGrid-Col>div::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #0470F50D;
}

.emotion-0 {
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  z-index: 10000;
  overflow: hidden;
  pointer-events: none;
  transform-origin: 50% 0%;
}

.emotion-0 .EmotionGrid-Container {
  height: 100%;
  opacity: 1;
  -webkit-transition: opacity 0.2s;
  transition: opacity 0.2s;
}

.emotion-0 .EmotionGrid-Row {
  height: 100%;
  background: #0470F50D;
}

.emotion-0 .EmotionGrid-Col {
  height: 100%;
}

.emotion-0 .EmotionGrid-Col>div {
  position: relative;
  width: 100%;
  height: 100%;
}

.emotion-0 .EmotionGrid-Col>div::before,
.emotion-0 .EmotionGrid-Col>div::after {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #0470F50D;
}

<div
  class="emotion-0"
/>
`;
